@@ -1,5 +1,9 @@
 = master
 
+* Improve performance of class_level_routing plugin using methods instead of instance_exec (jeremyevans)
+
+* Do not have route_block_args plugin affect class_level_routes plugin (jeremyevans)
+
 * Integrate internal after hook with error_handler plugin (jeremyevans)
 
 * Improve performance of internal before and after hooks (jeremyevans)
